# DemoAndroidCPP

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/aidlsvr/: IMyAidlInterface.aidl
app/src/main/cpp/: native-lib.cpp  native-lib.h
app/src/main/java/com/example/demo/: MainActivity.java
app/src/main/java/com/example/demo/layout/: ConstraintLayout.java  FrameLayout.java  FullscreenActivity.java  LinearActivity.java  TableLayout.java
app/src/main/java/com/example/demo/provider/: StudentsProvider.java
app/src/main/java/com/example/demo/rebuild/: Rebuild.java
app/src/main/java/com/example/demo/svr/: LocalService.java
app/src/main/res/layout/: activity_constraint_layout.xml  activity_frame_layout.xml  activity_fullscreen.xml  activity_linear_layout.xml  activity_main.xml  activity_rebuild.xml  activity_table_layout.xml
app/src/main/res/layout-v26/: activity_constraint_layout.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
